# WRP_PROJECT

./: LICENSE  README.md  WRP_1.ipynb  main.py  pyproject.toml  requirements.txt  template.py
app/: main.py
app/schemas/: example_schema.py
app/services/: example_service.py
app/utils/: file_utils.py
markap/: code-with-pep.md  com-1.md  com-2.md  extend-4.md  final.md
notebook/: 01_test_basic.ipynb  02_test_basic.ipynb  03_test_basic.ipynb  04_final.ipynb  final.ipynb  final_ext.md  final_extend.ipynb
src/: final.py  one.py
